@@ -420,6 +420,7 @@
   "createbigcannons.ponder.tag.munitions.description": "op u\u0250\u0254 \u028E\u01DD\u0265\u0287 \u0287\u0250\u0265\u028D pu\u0250 'suouu\u0250\u0254 \u028Eq p\u01DDsn s\u026F\u01DD\u0287\u0131 pu\u0250 s\u029E\u0254o\u05DF\u15FA",
   "createbigcannons.ponder.tag.operating_cannons": "suouu\u0250\u0186 bu\u0131\u0287\u0250\u0279\u01DDdO",
   "createbigcannons.ponder.tag.operating_cannons.description": "\u028E\u05DF\u01DD\u028C\u0131\u0287\u0254\u01DD\u025F\u025F\u01DD pu\u0250 \u028E\u05DF\u01DD\u025F\u0250s suouu\u0250\u0254 \u01DDsn o\u0287 \u028DoH",
+  "createbigcannons.subtitle.autocannon_round_flyby": "\u028Eq s\u01DD\u0131\u05DF\u025F puno\u0279 uouu\u0250\u0254o\u0287n\u2C6F",
   "createbigcannons.subtitle.fire_autocannon": "s\u01DD\u0279\u0131\u025F uouu\u0250\u0254o\u0287n\u2C6F",
   "createbigcannons.subtitle.fire_big_cannon": "s\u01DD\u0279\u0131\u025F uouu\u0250\u0254 b\u0131\u15FA",
   "createbigcannons.subtitle.fire_drop_mortar": "s\u01DD\u0279\u0131\u025F \u0279\u0250\u0287\u0279o\u026F do\u0279\u15E1",
@@ -427,6 +428,7 @@
   "createbigcannons.subtitle.flak_round_explosion": "s\u01DDpo\u05DFdx\u01DD puno\u0279 \u029E\u0250\u05DF\u2132",
   "createbigcannons.subtitle.fluid_shell_explosion": "s\u01DDpo\u05DFdx\u01DD \u05DF\u05DF\u01DD\u0265s p\u0131n\u05DF\u2132",
   "createbigcannons.subtitle.hot_projectile_splash": "s\u01DD\u0265s\u0250\u05DFds \u01DD\u05DF\u0131\u0287\u0254\u01DD\u0638o\u0279\u0500",
+  "createbigcannons.subtitle.machine_gun_round_flyby": "\u028Eq s\u01DD\u0131\u05DF\u025F puno\u0279 unb \u01DDu\u0131\u0265\u0254\u0250W",
   "createbigcannons.subtitle.mortar_stone_explode": "s\u01DDpo\u05DFdx\u01DD \u01DDuo\u0287s \u0279\u0250\u0287\u0279oW",
   "createbigcannons.subtitle.projectile_impact": "s\u0287\u0254\u0250d\u026F\u0131 \u01DD\u05DF\u0131\u0287\u0254\u01DD\u0638o\u0279\u0500",
   "createbigcannons.subtitle.projectile_splash": "s\u01DD\u0265s\u0250\u05DFds \u01DD\u05DF\u0131\u0287\u0254\u01DD\u0638o\u0279\u0500",
