@@ -420,6 +420,7 @@
   "createbigcannons.ponder.tag.munitions.description": "Blocks and items used by cannons, and what they can do",
   "createbigcannons.ponder.tag.operating_cannons": "Operating Cannons",
   "createbigcannons.ponder.tag.operating_cannons.description": "How to use cannons safely and effectively",
+  "createbigcannons.subtitle.autocannon_round_flyby": "Autocannon round flies by",
   "createbigcannons.subtitle.fire_autocannon": "Autocannon fires",
   "createbigcannons.subtitle.fire_big_cannon": "Big cannon fires",
   "createbigcannons.subtitle.fire_drop_mortar": "Drop mortar fires",
@@ -427,6 +428,7 @@
   "createbigcannons.subtitle.flak_round_explosion": "Flak round explodes",
   "createbigcannons.subtitle.fluid_shell_explosion": "Fluid shell explodes",
   "createbigcannons.subtitle.hot_projectile_splash": "Projectile splashes",
+  "createbigcannons.subtitle.machine_gun_round_flyby": "Machine gun round flies by",
   "createbigcannons.subtitle.mortar_stone_explode": "Mortar stone explodes",
   "createbigcannons.subtitle.projectile_impact": "Projectile impacts",
   "createbigcannons.subtitle.projectile_splash": "Projectile splashes",
