@@ -133,8 +133,8 @@ c58a162ab33e2d4841b7ccde59fa022506ef5dcc assets/createbigcannons/blockstates/ver
 8cc31b88cd6093baa4caddb02ff7f7ff793299f4 assets/createbigcannons/blockstates/wrought_iron_cannon_end.json
 303668cdb3754018ca137ea6074801c6927d3987 assets/createbigcannons/blockstates/wrought_iron_drop_mortar_end.json
 d942040026b2849ca2153a9933e8dc0c5c39f3c9 assets/createbigcannons/blockstates/yaw_controller.json
-039c1a567f56d7a180ac5387b15f945cc3d35588 assets/createbigcannons/lang/en_ud.json
-36fdad5af4eb7dc0b509218b190601e4e30816fe assets/createbigcannons/lang/en_us.json
+2fafcecb7526aad8c3e8bf02b99e974e5f394264 assets/createbigcannons/lang/en_ud.json
+ec92f11916aeea5762c1f8415fe50e85a01875ea assets/createbigcannons/lang/en_us.json
 c6129d8380bcb26579fc200fc054f4a485ad9b2a assets/createbigcannons/models/block/ap_shell.json
 14e7b948a05007b8c96e35f92f0bff66427de7b8 assets/createbigcannons/models/block/ap_shot.json
 7157cc923bd4f217cb47117fbfe2b9542e367d17 assets/createbigcannons/models/block/autocannon/bronze_autocannon_spring.json
@@ -442,7 +442,7 @@ dca719fb593d53732e1e08ac40c57a8c994e62db assets/createbigcannons/models/item/ver
 f839573c27ea1b67e7918c5d821dec84edc69cb1 assets/createbigcannons/models/item/wrought_iron_cannon_chamber.json
 7f06c591cae8cc0a4b5335ec77f9c6849112b8a7 assets/createbigcannons/models/item/wrought_iron_cannon_end.json
 c4a23578234a7a8360f1f5869c4558f71614644b assets/createbigcannons/models/item/wrought_iron_drop_mortar_end.json
-c7b03cfbe1a8771f59dac3ec596da9a27df3619a assets/createbigcannons/sounds.json
+4198145958d4cc947702f92154011326047d3602 assets/createbigcannons/sounds.json
 19a8203055aaded163288b6e680826ca3435e060 data/c/tags/fluids/molten_bronze.json
 03f523c9dcb51b1f72e2d7045df53c08c15febe0 data/c/tags/fluids/molten_cast_iron.json
 be41407bc6de6e38238e102cba9fdedc3c651dce data/c/tags/fluids/molten_nethersteel.json
